--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-react-ts-tw-template",
+  "name": "learning-electron",
   "version": "0.1.0",
   "private": true,
   "main": "public/electron.js",
@@ -14,6 +14,7 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "dotenv": "^16.4.5",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
